aws-vpc/vpc.tf
resource "aws_vpc" "jykim-vpc" {
  assign_generated_ipv6_cidr_block = "false"
  cidr_block                       = "192.168.0.0/16"
  enable_dns_hostnames             = "true"
  enable_dns_support               = "true"
  instance_tenancy                 = "default"

  tags = {
    Name = "jykim-vpc"
  }

  tags_all = {
    Name = "jykim-vpc"
  }
}
